Force rendering of DevTools' toolbox WebContents.

The DevTools toolbox holds a placeholder for the inspected WebContents. When the
placeholder is resized, a frame is requested. The inspected WebContents is
resized when the frame is rendered. This CL forces rendering of the toolbox at
all times (even when occluded), to make sure that a frame can be rendered even
when the inspected WebContents fully covers the toolbox.

Bug: 828307
Change-Id: Id966ec985b97b3a0978f73f38929dc2b51cbd1c3
Reviewed-on: https://chromium-review.googlesource.com/996478
Commit-Queue: François Doray <fdoray@chromium.org>
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549176}
Former-commit-id: 43eb8e11ef747705a3b180545a5677d37a2e022d